# asteroids

./: .clang-format  .gitmodules  CMakeLists.txt  Makefile  main.cpp  make.sh
include/: SFML
